Library overrides - modifiers #79635

Closed
opened 2020-08-08 07:08:44 +02:00 by Facundo · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

system-info.txt
Captura.PNG

Blender Version
Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-02 18:54, hash: 0264f53e30
Worked: (newest version of Blender that worked as expected)

Short description of error
There are some actions you can do with modifiers from a linked file (with library override), which maybe they shouldn't be allowed. There is also a crash.

Exact steps for others to reproduce the error

  • Open up Blender, take for example the default cube and add a mirror modifier.
  • Save the file to disk.
  • Create a new file and remove the default cube.
  • Go to File->Link, select the saved file, and choose the collection of the cube.
  • Make it into Library Override (Object->Relations->Make library override)
  • Select the cube of the linked file, and in the properties panel go to the Modifiers Tab.
  • You'll see the mirror modifier, the X button in the UI is disabled (cannot be removed), but you can actually remove it by pressing Delete or X keys on the keyboard.
  • If you hover the mouse over the modifier, and press Ctrl+A (shortcut for applying), Blender crashes.
  • If you add more modifiers, you can move the mirror modifier (which was added in the original file) up and down, but you cannot move it to First or Last in the stack from the UI menu (I don't know if it should be allowed to move it).
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 [system-info.txt](https://archive.blender.org/developer/F8757967/system-info.txt) ![Captura.PNG](https://archive.blender.org/developer/F8757968/Captura.PNG) **Blender Version** Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-02 18:54, hash: `0264f53e30` Worked: (newest version of Blender that worked as expected) **Short description of error** There are some actions you can do with modifiers from a linked file (with library override), which maybe they shouldn't be allowed. There is also a crash. **Exact steps for others to reproduce the error** - Open up Blender, take for example the default cube and add a mirror modifier. - Save the file to disk. - Create a new file and remove the default cube. - Go to File->Link, select the saved file, and choose the collection of the cube. - Make it into Library Override (Object->Relations->Make library override) - Select the cube of the linked file, and in the properties panel go to the Modifiers Tab. - You'll see the mirror modifier, the X button in the UI is disabled (cannot be removed), but you can actually remove it by pressing Delete or X keys on the keyboard. - If you hover the mouse over the modifier, and press Ctrl+A (shortcut for applying), Blender crashes. - If you add more modifiers, you can move the mirror modifier (which was added in the original file) up and down, but you cannot move it to First or Last in the stack from the UI menu (I don't know if it should be allowed to move it).
Author

Added subscriber: @Facu

Added subscriber: @Facu

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I confirm the crash and the possibility to delete the modifier using shortcuts.

I confirm the crash and the possibility to delete the modifier using shortcuts.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2020-08-11 19:02:37 +02:00

None of those shortcuts should be active (operator poll functions should prevent them to run...) only valid operations are adding new modifiers, and moving them around.

None of those shortcuts should be active (operator poll functions should prevent them to run...) only valid operations are adding new modifiers, and moving them around.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

I will consider this one as fixed for now, at least as best as possible. Note that one cannot move around any modifier in liboverride object now, but this is a limitation with current system that needs design and refactor work, and is therefore outside of the scope of a bug report. See #79735 (Enhance ways of accessing active modifier for poll functions of operators)

I will consider this one as fixed for now, at least as best as possible. Note that one cannot move around any modifier in liboverride object now, but this is a limitation with current system that needs design and refactor work, and is therefore outside of the scope of a bug report. See #79735 (Enhance ways of accessing active modifier for poll functions of operators)
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:25:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79635
No description provided.